# App-ads

./: .gitignore  Dockerfile  index.html  main.py  package-lock.json  package.json  pp-ads.txt  pyproject.toml  utils.py  validator.py
src/: App.css  App.jsx  index.css  validator.js
tests/: test_validator.py
